$Id$

	!!!! DON'T USE, THIS VERSION HAS LOTS OF BUGS !!!!
	==================================================
	But if you don't use the bbs then you may be safe.


v0.71.0		27-Oct-2004

	general:
		From filetranfer records removed the batch and bidirectional
		switches, these are no longer needed.

	mbsebbs:
		In change handle the first character of the name is not 
		capitalized.
		Changed layout of raw directory listing to support longer
		filenames.
		Rewrote terminal i/o.
		If a user pages the sysop a hint is displayed to fill in the
		reason to chat, language prompt 28.
		After forced chat, redisplay the last menu.
		Removed support for non-batching protocols (xmodem) and for
		bidirectional protocols.

	mbnewusr:
		Rewrote terminal i/o.

	mbsetup:
		In file transfers edit, removed switches for batch and bidirect
		protocols, added a switch for internal protocols.

	lang:
		Changed width of prompt 261.
		Added prompt 28.
		Removed leading spaces of prompt 151.
		Removed prompt 276.

	script:
		Modified rundoor.sh so that it uses two different dosemu
		configuration files, one for virtual modem and one without.
		See the manual doors.html.
		In the editor script modified the joe header so that it will
		work with the new terminal i/o.

	examples:
		Fixed logo display.
		Fixed Spanish txtfiles to leave out an old support bbs.


v0.70.0		06-Jun-2004 - 26-Oct-2004.

        upgrade:
                If you run a version older then 0.60.0, first upgrade to 0.60.0
                If you run a version older then 0.60.0, first upgrade to 0.60.0
                (That was twice).
                Don't forget to backup /opt/mbse and all fle areas!

                Check if /opt/mbse/var/msgs is empty before using this version.
                Make sure that /opt/mbse/queue is empty, then close the
                bbs with "mbstat close wait".
                Kill mbtask, "kill `/sbin/pidof mbtask` might work.
		Now you may do the upgrade with "make install" as root. This