@@ -1,1 +1,1 @@
-filelist mball mbchat mblang mbnewusr mbsebbs mbstat mbtoberep mbuser
+filelist mbnewusr mbsebbs
