@@ -10,6 +10,8 @@ v0.71.0		27-Oct-2004
 	general:
 		From filetranfer records removed the batch and bidirectional
 		switches, these are no longer needed.
+		Added new subdirectory mbutils. Some sources from the mbsebbs
+		subdirectory are moved there.
 
 	mbsebbs:
 		In change handle the first character of the name is not 
